--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "start:debug": "nodemon -L --inspect=0.0.0.0:9229 ./bin/www"
   },
   "dependencies": {
+    "@prisma/client": "^4.3.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
