--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,3 +43,4 @@ services:
       - CHOKIDAR_USEPOLLING=true
       - WATCHPACK_POLLING=true
     working_dir: "/src/frontend"
+    command: npm run dev
