--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
     "next": "^12.2.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
+    "react-calendar": "^3.7.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
