--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "next": "^12.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -16,5 +17,6 @@
   "devDependencies": {
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
