--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fullcalendar/core": "^5.11.3",
+    "@fullcalendar/daygrid": "^5.11.3",
+    "@fullcalendar/react": "^5.11.2",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "firebase": "^9.9.3",
     "next": "^12.2.5",
+    "next-transpile-modules": "^9.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-calendar": "^3.7.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.0.3"
   },
   "devDependencies": {
     "eslint": "8.23.0",
