--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     volumes:
       - ./:/src
     working_dir: "/src/backend"
-    # command: npm run start:debug
+    command: npm run start:debug
 
   mysql:
     build: ./db/dockerfile
